<resources>
    <string name="app_name">HomeLooker</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //Main activity
    <string name="hintIniciar">Iniciar Sesión</string>
    <string name="hintNoTienes">¿No tienes cuenta?</string>
    <string name="hintRegistrate">Registrate</string>
    <string name="ahoraNo">AHORA NO</string>


    //Nombre de la aplicacion
    <string name="nombre">HomeLooker</string>

    <string name="menu_busqueda">Búsqueda</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_about">About</string>

    //Boton ajustes
    <string name="ajustes">Ajustes</string>
    <string name="ventanaAjustes">Ajustes</string>
    <string name="editarCuenta">Editar cuenta</string>
    <string name="cambiarContra">Cambiar contraseña</string>
    <string name="eliminarCuenta">Eliminar cuenta</string>

    //Ventana Registro
    <string name="hintCorreo">Correo electrónico</string>
    <string name="hintNombreCompleto">Nombre completo</string>
    <string name="hintContra">Contraseña</string>

    //Ventana editar cuenta
    <string name="botonEdit">Editar</string>
    <string name="textoNombre">Introduzca su nuevo Nombre: </string>
    <string name="textoUsuario">Introduzca su nuevo Usuario: </string>
    <string name="hintNombre">Nombre</string>
    <string name="hintUsuario">Usuario</string>

    //Ventana cambiar contrasenia
    <string name="tituloContra">Cambiar contraseña</string>
    <string name="rellenar">Rellene los campos según se indica</string>
    <string name="oldContra">Antigua contraseña: </string>
    <string name="nuevaContra">Nueva contraseña: </string>
    <string name="repiteContra">Repite nueva contraseña: </string>
    <string name="botonCambiar">Cambiar</string>

    //Ventana favoritos
    <string name="textoFav">Aquí apareceran los alojamientos\n marcados como favoritos</string>

    //Fragment busqueda
    <string name="textoBienvenida">Bienvenido/a </string>
    <string name="botonBuscar">Buscar</string>
    <string name="hintBusqueda">Ubicación</string>
    <string name="botonAniadir">Añadir estancia</string>

    //Ventana nueva estancia
    <string name="tituloEstancia">Añadir nueva Estancia</string>

    <string name="hintNombreEstancia">Nombre Estancia</string>
    <string name="hintprecioEstancia">Precio</string>
    <string name="hintMetrosEstancia">Metros cuadrados</string>
    <string name="hintNumDormitorios">Número de dormitorios</string>
    <string name="hintDescripcion">Introduzca aquí la descripción de la estancia.</string>
    <string name="hintCaracteristicas">Introduzca aquí las características de la estancia.</string>
    <string name="botonInsertarEstancia">Insertar Estancia</string>
    <string name="hintImagen">URL de la imagen</string>

    //Ventana about
    <string name="about">About us</string>
    <string name="textoAbout">Bienvenido/a a HomeLooker, una aplicación en la que podrás buscar tu nueva estancia dónde pasarás a vivir, nunca viene mal un cambio de domicilio, ya sea para cambiar de aires, nuevas aventuras...Te invito a explorar la aplicación y ver el gran catálogo de estancias que ofrecemos a nuestros clientes</string>
    <string name="contacta">Contacta con nosotros</string>
    <string name="botoncontacto">Contactar</string>

    //Ventana resultados
    <string name="tituloResultados">Ventana Resultados</string>
    <string name="botonFiltrar">Filtrar</string>
    <string name="botonOrdenar">Ordenar</string>

    //Ventana Filtrar
    <string name="tituloCancelar">Cancelar</string>
    <string name="precio">Precio (€)</string>
    <string name="metros">Metros cuadrados (m\u00B2)</string>
    <string name="dormitorios">Num. dormitorios</string>
    <string name="radio1">1</string>
    <string name="radio2">2</string>
    <string name="radio3">3</string>
    <string name="radio4">4 o más</string>
    <string name="botonMostrar">Mostrar Resultados</string>

    //Ventana Ordenar
    <string name="ordenNombre">Nombre</string>
    <string name="ordenPrecio">Precio</string>
    <string name="ordenMetros">Metros</string>
    <string name="ordenDormitorios">Dormitorios</string>

    //Ventana Informacion
    <string name="botonContactar">Contactar al vendedor</string>
    <string name="botonEditarEstancia">Editar Estancia</string>
    <string name="botonEliminarEstancia">Eliminar Estancia</string>

    //Ventana Editar Estancia
    <string name="tituloEditarEstancia">Editar Estancia</string>
    <string name="nuevoPrecio">Introduzca el nuevo precio</string>
    <string name="nuevaDesc">Introduzca una nueva descripcion</string>
    <string name="nuevasCarac">Introduzca las nuevas caracteristicas</string>

    //Resto de strings
    <string name="correo">abuenoh02@informatica.iesvalledeljerteplasencia.es</string>
    <string name="seguroEliminarCuenta">¿Seguro que quiere eliminar la cuenta?</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="borradoExito">Se ha borrado con exito</string>
    <string name="noExisteUser">No existe o no se ha podido eliminar el user</string>
    <string name="asuntoCorreo">Incidencia o duda con la app.</string>
    <string name="cuerpoCorreo">Hola Alberto, me pongo en contacto contigo porque estoy utilizando tu app y me ha surgido la siguiente duda:</string>
    <string name="errorCorreo">No se encontró ninguna aplicación de correo electrónico instalada.</string>
    <string name="errorSpinnerBusqueda">Error, debe seleccionar un valor válido en el Spinner</string>
    <string name="errorPais">Error, debe seleccionar un país válido en el campo ubicación</string>
    <string name="errorAccesoPagina">No puede acceder a la siguiente página, no tiene permisos</string>
    <string name="errorContraNoIgual">Error, la contraseña que has introducido no es la misma que antes</string>
    <string name="contraModificada">Contraseña modificada con exito</string>
    <string name="errorModificacionDatos">Error, los datos no se han podido modificar</string>
    <string name="errorContraNoCoincide">Error, las contraseñas no coinciden</string>
    <string name="errorDatosExisten">Error, los datos introducidos ya existen</string>
    <string name="datosModificados">Datos modificados con exito</string>
    <string name="estanciaEliminada">La estancia se ha eliminado de favoritos</string>
    <string name="estanciaGuardadaFav">Estancia guardada en favoritos correctamente</string>
    <string name="asuntoCorreo2">Estoy interesado en comprar su estancia.</string>
    <string name="cuerpoCorreo2">Hola Alberto, me pongo en contacto contigo porque estoy interesado en comprar una vivienda que he visto en la app Homelooker</string>
    <string name="noExisteEstancia">No existe o no se ha podido eliminar</string>
    <string name="seguroEliminarEstancia">¿Seguro que quiere eliminar la estancia?</string>
    <string name="eliminarEstancia">Eliminar estancia</string>
    <string name="errorVuelve">Error, vuelva a introducir los datos correctamente</string>
    <string name="estanciaCreada">Estancia creada correctamente</string>
    <string name="usuarioCreado">Usuario creado correctamente</string>
    <string name="resultEncontrados"> resultados encontrados</string>


</resources>