<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_busqueda">

    <fragment
        android:id="@+id/nav_busqueda"
        android:name="com.example.homelooker.ui.busqueda.BusquedaFragment"
        android:label="@string/menu_busqueda"
        tools:layout="@layout/fragment_busqueda" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.example.homelooker.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.example.homelooker.ui.ajustes.AjustesFragment"
        android:label="@string/menu_ajustes"
        tools:layout="@layout/activity_ajustes" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.homelooker.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>