<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoinfo">

    <LinearLayout
        android:id="@+id/layoutPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tituloResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lilly"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:text="@string/tituloResultados"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contResultados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonFiltrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/botonFiltrar" />

            <Button
                android:id="@+id/botonOrdenar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/botonOrdenar" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutResultados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenEstancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>