<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ajustes.AjustesFragment"
    android:background="@drawable/fondoajustes">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/textoAjustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline26"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/iconoLogoAjustes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline17"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconohl" />

    <Button
        android:id="@+id/botonEditar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/editarCuenta"
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline16"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/botonEliminar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/eliminarCuenta"
        app:layout_constraintBottom_toTopOf="@+id/guideline20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />

    <Button
        android:id="@+id/botonCambiarContra"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/cambiarContra"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

</androidx.constraintlayout.widget.ConstraintLayout>